# eurobot-backend

./: .gitignore  README.md  pyproject.toml  test_connection.py  test_orm.py  test_sqlalchemy.py
app/: main.py
app/core/: config.py
app/db/: init_db.py  session.py
app/models/: identity.py  role.py  user.py  user_role.py
